--- a/front/packages/locales/package.json
+++ b/front/packages/locales/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sugar-core/preferences",
+  "name": "@sugar/locales",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -12,23 +12,21 @@
     "react-redux": "^9.1.2",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "handlebars": "^4.7.8",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@sugar-core/typings": "workspace:*",
-    "@sugar/locales": "workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
+    "@sugar/shared": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.13",
     "@types/react": "^18.2.22",
+    "@types/lodash": "^4.14.191",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.10.0",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "jsdom": "latest",
     "lint-staged": "^13.1.0",
     "plop": "^3.1.1",
     "prettier": "^2.8.1",
